force-app/main/default/objects/LoanApplicant/LoanApplicant.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>