force-app/main/default/objects/LoanApplicant/fields/Expense_Type__c.field-meta.xml
<CustomField>
    <fullName>Expense_Type__c</fullName>
    <label>Expense Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Utilities</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Household</fullName>
            </value>
            <value>
                <fullName>Healthcare</fullName>
            </value>
            <value>
                <fullName>Education</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>