force-app/main/default/objects/LoanApplicant/fields/Monthly_Expenses__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Expenses__c</fullName>
    <formula>CASE(Frequency__c, &quot;Monthly&quot;, Expense_Amount__c, &quot;Quarterly&quot;, Expense_Amount__c / 3, &quot;Yearly&quot;, Expense_Amount__c / 12, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>